--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,13 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
+
+    <string-array name="home_now">
+        <item>Now</item>
+        <item>Today</item>
+        <item>Weekly</item>
+        <item>Custom</item>
+
+    </string-array>
+
 </resources>
